# algorithms

./: CMakeLists.txt  README.md
sorting/: checks.json
sorting/insertion-sort/: CMakeLists.txt  insertion-sort-kormen.cpp
sorting/sort/: CMakeLists.txt  bubble_sort_kormen.cpp  bubble_sort_kormen.hpp  insertion-sort-kormen.cpp  merge_sort_kormen.cpp  merge_sort_kormen2.cpp  quicksort.cpp
sorting/sort/test/: CMakeLists.txt  sort_test.cpp
